# UraniumDI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  configure
Samples/: CMakeLists.txt
Samples/ConfigurationSample/: CMakeLists.txt  main.cpp
Samples/SampleProject/: CMakeLists.txt  main.cpp
UraniumDI/: CMakeLists.txt
UraniumDI/Tests/: CMakeLists.txt  Test.cpp
UraniumDI/UnDI/: Container.cpp  Container.h  IContainer.h  IServiceProvider.h  ServiceActivator.h  ServiceRegistration.h
UraniumDI/UnDI/Base/: Base.h  CompilerTraits.h  Platform.h  PlatformTraits.h
UraniumDI/UnDI/Builder/: ContainerBuilder.cpp  ContainerBuilder.h
UraniumDI/UnDI/Config/: Configuration.cpp  Configuration.h  ConfigurationBuilder.cpp  ConfigurationBuilder.h  ConfigurationSection.cpp  ConfigurationSection.h  IConfiguration.h  IConfigurationRegistry.h  IConfigurationSection.h
UraniumDI/UnDI/Config/Reg/: CommandLineConfigurationRegistry.cpp  CommandLineConfigurationRegistry.h  MemoryConfigurationRegistry.cpp  MemoryConfigurationRegistry.h
UraniumDI/UnDI/Containers/: List.h
UraniumDI/UnDI/Lifetime/: ILifetimeScope.h  LifetimeScope.cpp  LifetimeScope.h
UraniumDI/UnDI/Memory/: IAllocator.h  Memory.h  Object.h  Ptr.h  ReferenceCounter.h  SystemAllocator.h
UraniumDI/UnDI/RTTI/: RTTI.h
UraniumDI/UnDI/Registry/: IServiceRegistry.h  ServiceRegistry.cpp  ServiceRegistry.h  ServiceRegistryBuilder.cpp  ServiceRegistryBuilder.h
UraniumDI/UnDI/Utils/: ErrorCode.h  Result.h  UUID.h
cmake/: Config.cmake
